Other entities updated, registration created
