# src/main/java/com/zhpwb/harcrej/model/DruzynaEntity.java
@@ -13,17 +13,23 @@ public class DruzynaEntity {
     @GeneratedValue
     @Id
     private int druzynaId;
-    private int szczepId;
+
+    // Foreign Key
+    @ManyToOne
+    @JoinColumn(name = "szczep_id")
+    private SzczepEntity szczep;
+
     private String name;
     @Embedded
     private Address addressOfOperation;
     @ManyToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "druzynowy_id")
+    @JoinColumn(name = "druzynowy_id")  // Foreign key for PersonEntity (druzynowy)
     private PersonEntity druzynowy;
-    private String type;
+    private TypeDto type;
     @OneToMany(cascade = CascadeType.ALL)
     private List<PersonEntity> komenda;
     @Embedded
     private StatsDto currentStats;
     private String yearEstablished;
+
 }
