# src/main/java/com/zhpwb/harcrej/model/SzczepEntity.java
@@ -1,10 +1,9 @@
 package com.zhpwb.harcrej.model;
 
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
 import lombok.Data;
+
+import java.util.List;
 
 @Entity
 @Table(name = "szczep")
@@ -16,5 +15,12 @@ public class SzczepEntity {
     private int szczepId;
     private String name;
     private String areaOfOperation;
-    private String personInCharge;
+    @ManyToOne(cascade = CascadeType.ALL)
+    @JoinColumn(name = "szczepowy_id")
+    private PersonEntity szczepowy;
+    @OneToMany(mappedBy = "szczep")
+    private List<DruzynaEntity> druzyny;
+    @ManyToOne
+    @JoinColumn(name = "hufiec_id")
+    private HufiecEntity hufiec;
 }
