# src/main/java/com/zhpwb/harcrej/model/TypeDto.java
@@ -1,0 +1,8 @@
+package com.zhpwb.harcrej.model;
+
+public enum TypeDto {
+
+    HARCERZE,
+    ZUCHY,
+    WEDROWNICY
+}
